RESOLVED FIXED248944
WAAPI composite animations not working correctly
https://bugs.webkit.org/show_bug.cgi?id=248944
Summary WAAPI composite animations not working correctly
Ben Frain
Reported 2022-12-08 07:12:14 PST
Simple operations from the Web Animations API like a composite add do not work as expected in Safari. This simple example: https://codepen.io/benfrain/pen/JjXQqVO Click 'Move Me' to start the box moving, and then click the 'Scale Me' button to add a scale (using composite: add). It in no way renders as expected in Safari! Fine in Firefox/Chrome.
Attachments
Reduction (843 bytes, text/html)
2022-12-12 05:38 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2022-12-12 05:38:58 PST
Created attachment 464009 [details] Reduction
Antoine Quint
Comment 2 2022-12-12 07:11:58 PST
Antoine Quint
Comment 3 2022-12-12 07:14:48 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/37456
EWS
Comment 4 2022-12-12 09:28:05 PST
Committed 257731@main (4374420d956e): <https://commits.webkit.org/257731@main> Reviewed commits have been landed. Closing PR #7488 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2022-12-12 09:29:18 PST
Note You need to log in before you can comment on or make changes to this bug.