WAAPI composite animations not working correctly https://bugs.webkit.org/show_bug.cgi?id=248944

Reviewed by Antti Koivisto.

We would only ever compute the blended additive or accumulative keyframes if the offset was either 0 or 1,
completely ignoring any keyframe in between.

* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/combining-effects/effect-composition-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/combining-effects/effect-composition.html:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setAnimatedPropertiesInStyle):

Canonical link: https://commits.webkit.org/257731@main